# CMaRISC

./: CMakeLists.txt  Doxyfile  README.md
include/: CMakeLists.txt  bits.h  cmdline.h  disasm.h  instruction.h  object.h  vm.h
src/: CMakeLists.txt
src/libcmdline/: CMakeLists.txt  cmdline.c
src/libobject/: CMakeLists.txt  object.c
src/libvm/: CMakeLists.txt  core.c  disasm.c  registers.h  tools.c  vm.h
src/mar/: CMakeLists.txt  mar.c
src/mas/: CMakeLists.txt  analyzer.c  analyzer.h  assembler.c  assembler.h  mas.c  mas.h
src/mcc/: CMakeLists.txt  cc.cpp  cc.hpp  cc.output  cc_test.cpp  cc_test.hpp  compile.cpp  mcc.cpp  tokens.cpp
src/mcc/core/: CMakeLists.txt  assembly.cpp  cc.l  cc.y  compile.cpp  nodes.cpp
src/mcc/include/: assembly.h  compile.h  exception.h  nodes.h
src/mdbg/: CMakeLists.txt  mdbg.c
src/ml/: CMakeLists.txt  ml.c
src/mpp/: CMakeLists.txt  except.h  expansion.cpp  expansion.h  lexer.cpp  lexer.h  macro.cpp  macro.h  mpp.cpp  preprocess.cpp  preprocess.h
test/: CMakeLists.txt  vmtest.c
test/asm/: binary  first.asm
